# algorithm-test-usage

./: .gitignore  .gitmodules  README.md
src/: base.h  fenwick.h  prime.h
test/: CMakeLists.txt  fenwick_test.cpp  lca_test.cpp  prime_test.cpp
